# RL

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
lr2/: CMakeLists.txt  README.md  lr2.cpp  main.cpp
lr2/include/: Agent.h  Cell.h  Environment.h  LeftRightChoise.h  MagicCell.h  Manager.h
lr2/src/: Agent.cpp  Cell.cpp  Environment.cpp  LeftRightChoise.cpp  MagicCell.cpp  Manager.cpp  main.cpp
lr3/: CMakeLists.txt  README.md
lr3/include/: Jack.h  Manager.h  Office.h  PlayerTask.h  Service.h
lr3/python/: lr3.ipynb
lr3/src/: Jack.cpp  Manager.cpp  Office.cpp  PlayerTask.cpp  Service.cpp  main.cpp
lr4/: CMakeLists.txt  README.md
lr4/include/: Dealer.h  EpisodeHistory.h  Manager.h  Player.h  Service.h
lr4/python/: 4_MC_studentlow (4).ipynb  lr4.ipynb
lr4/src/: Dealer.cpp  EpisodeHistory.cpp  Manager.cpp  Player.cpp  Service.cpp  main.cpp
